Tests/test_output/Statistics_Functions/Signal_generation/test_peakgen.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Undefined function 'SpheroidSignal' for input arguments of type 'double'.

Error in peakgen (line 116)
    Sig = Sig + SpheroidSignal(wDim, Rad(peak), Mag(peak), Smo(peak), centre_locs{peak}); %- Signal Should smooth here really!!
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in test_peakgen (line 14)
Sig = peakgen([1,2], 3, [0,0], [100,150], {[40,30], [70,120]});
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
